add db and migrations
