# internal/dto/patients.go
@@ -2,7 +2,6 @@ package dto
 
 type Patient struct {
 	ID         int64
-	DoctorID   string
 	Fio        string
 	Phone      string
 	Address    string
@@ -11,6 +10,5 @@ type Patient struct {
 	Breed      string
 	Age        float64
 	Gender     string
-	Status     string
 	IsNeutered bool
 }
