# transport/public.go
@@ -1,7 +1,6 @@
 package transport
 
 import (
-	"doctor-vet-patients/docs"
 	"doctor-vet-patients/internal/service"
 	"github.com/gofiber/fiber/v2"
 	"github.com/gofiber/swagger"
@@ -14,15 +13,13 @@ import (
 // @termsOfService	http://swagger.io.terms/
 func RegisterRoutes(app *fiber.App, svc service.Service) {
 
-	docs.SwaggerInfo.BasePath = "/"
-
 	app.Get("/swagger/*", swagger.HandlerDefault)
 
 	app.Get("/treatments", func(c *fiber.Ctx) error {
 		return TreatmentsHandler(c, svc)
 	})
 
-	app.Get("/treatment/id", func(c *fiber.Ctx) error {
+	app.Get("/treatment/:id", func(c *fiber.Ctx) error {
 		return TreatmentHandler(c, svc)
 	})
 
